--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -24,36 +24,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EYU0EkY2qbv_",
-        "outputId": "9cfc1612-e047-4a2c-dd9d-885f9cb529d5"
+        "outputId": "6516bf47-b690-4219-d8dc-1e26b26e3dcc"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rGet:1 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "\r0% [Connecting to archive.ubuntu.com (185.125.190.39)] [1 InRelease 14.2 kB/88.\r                                                                               \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
-            "\r0% [Waiting for headers] [1 InRelease 38.8 kB/88.7 kB 44%] [2 InRelease 0 B/3,6\r0% [Waiting for headers] [1 InRelease 60.5 kB/88.7 kB 68%] [Waiting for headers\r0% [2 InRelease gpgv 3,626 B] [Waiting for headers] [1 InRelease 60.5 kB/88.7 k\r                                                                               \rIgn:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Get:4 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
-            "Ign:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Hit:7 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:8 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
+            "\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [Connecting to security.\r0% [Connecting to archive.ubuntu.com (185.125.190.36)] [Connecting to security.\r0% [1 InRelease gpgv 3,626 B] [Connecting to archive.ubuntu.com (185.125.190.36\r                                                                               \rIgn:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [Waiting for headers] [Wait\r                                                                               \rHit:3 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [Waiting for headers] [Wait\r                                                                               \rGet:4 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rGet:5 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rIgn:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rHit:7 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [4 InRelease 14.2 kB/88.7 k\r                                                                               \rGet:8 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Hit:9 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
             "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Get:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease [15.9 kB]\n",
-            "Get:12 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
-            "Get:13 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [907 kB]\n",
-            "Hit:14 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Get:15 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,496 kB]\n",
-            "Get:16 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2,728 kB]\n",
-            "Get:19 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [1,949 kB]\n",
-            "Get:20 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,272 kB]\n",
-            "Get:21 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [999 kB]\n",
-            "Get:22 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [941 kB]\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "Get:12 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease [15.9 kB]\n",
+            "Hit:13 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Get:15 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [1,950 kB]\n",
+            "Get:17 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,496 kB]\n",
+            "Get:18 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [999 kB]\n",
+            "Get:19 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [2,728 kB]\n",
+            "Get:20 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [907 kB]\n",
+            "Get:21 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [941 kB]\n",
+            "Get:22 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,272 kB]\n",
             "Get:23 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,165 kB]\n",
             "Get:24 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic/main amd64 Packages [45.3 kB]\n",
-            "Fetched 14.8 MB in 4s (3,861 kB/s)\n",
+            "Fetched 14.8 MB in 4s (4,007 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -94,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2xEBlAwwqyQX",
-        "outputId": "758df3ba-f1d3-4b3b-b528-7ef8835fee50"
+        "outputId": "666af2b7-d513-4090-96b2-25a83d5720ba"
       },
       "execution_count": 3,
       "outputs": [
@@ -102,16 +102,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-04-25 02:17:18--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
+            "--2022-04-24 16:16:11--  https://jdbc.postgresql.org/download/postgresql-42.2.16.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
             "Connecting to jdbc.postgresql.org (jdbc.postgresql.org)|72.32.157.228|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1002883 (979K) [application/java-archive]\n",
             "Saving to: ‘postgresql-42.2.16.jar’\n",
             "\n",
-            "postgresql-42.2.16. 100%[===================>] 979.38K  --.-KB/s    in 0.1s    \n",
+            "postgresql-42.2.16. 100%[===================>] 979.38K  5.77MB/s    in 0.2s    \n",
             "\n",
-            "2022-04-25 02:17:18 (6.48 MB/s) - ‘postgresql-42.2.16.jar’ saved [1002883/1002883]\n",
+            "2022-04-24 16:16:12 (5.77 MB/s) - ‘postgresql-42.2.16.jar’ saved [1002883/1002883]\n",
             "\n"
           ]
         }
@@ -145,7 +145,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WZXPRi9ErLCp",
-        "outputId": "c9d9ea41-9747-45d3-b27e-b84774e587f1"
+        "outputId": "bd0d4774-a375-4928-bc44-fb24edd142e9"
       },
       "execution_count": 5,
       "outputs": [
@@ -195,7 +195,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rHtWg-agrU5Q",
-        "outputId": "abc7c0a9-e2f4-4eb3-e61a-64418d6213fa"
+        "outputId": "d0dac19c-4eb2-4f70-b700-8922834d7aa5"
       },
       "execution_count": 6,
       "outputs": [
@@ -245,7 +245,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "35iGrFwJrs65",
-        "outputId": "debd900f-9df0-4ce4-86e6-95b198fe0dc8"
+        "outputId": "ab5093cf-cedc-47a6-f78c-11daa40211ea"
       },
       "execution_count": 7,
       "outputs": [
@@ -295,7 +295,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mx-s3bnYr2Mo",
-        "outputId": "b0eeb072-400a-45ab-fb5d-f1d6177be3fc"
+        "outputId": "4f82bb4a-7211-42c2-a8e6-fd624fb806d7"
       },
       "execution_count": 8,
       "outputs": [
@@ -345,7 +345,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NmiZdZ6EsF-4",
-        "outputId": "b7543247-f7c4-4a18-8346-7c38dd47b7ce"
+        "outputId": "5fb24ffe-ff9d-4410-f8fe-95b96df809ab"
       },
       "execution_count": 9,
       "outputs": [
@@ -408,17 +408,17 @@
         "#Paid reviews\n",
         "paid_reviews = paid_review_df.count()\n",
         "five_star_paid_reviews = paid_review_df.filter(\"star_rating==5\").count()\n",
-        "five_star_paid_percent = five_star_paid_reviews/total_helpful_reviews*100\n",
+        "five_star_paid_percent = five_star_paid_reviews/paid_reviews*100\n",
         "\n",
         "#Unpaid reviews\n",
         "unpaid_reviews = unpaid_review_df.count()\n",
         "five_star_unpaid_reviews = unpaid_review_df.filter(\"star_rating==5\").count()\n",
-        "five_star_unpaid_percent = five_star_unpaid_reviews/total_helpful_reviews*100"
+        "five_star_unpaid_percent = five_star_unpaid_reviews/unpaid_reviews*100"
       ],
       "metadata": {
         "id": "7_vfUKR9sMgx"
       },
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -437,20 +437,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "udBCAe01t-TP",
-        "outputId": "00218610-4760-4880-94f7-6fa0d96cc6bb"
+        "outputId": "7d7b8d44-67f0-4a4a-fd62-75d2fe0d4a2a"
       },
-      "execution_count": 16,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+-----------------+-------------+--------------+-------------------+\n",
-            "|      Review Type|Total Reviews|5 Star Reviews|   % 5 Star Reviews|\n",
-            "+-----------------+-------------+--------------+-------------------+\n",
-            "|      Vine (paid)|          130|            70|0.41297935103244837|\n",
-            "|Non-Vine (unpaid)|        16820|          7956|  46.93805309734513|\n",
-            "+-----------------+-------------+--------------+-------------------+\n",
+            "+-----------------+-------------+--------------+-----------------+\n",
+            "|      Review Type|Total Reviews|5 Star Reviews| % 5 Star Reviews|\n",
+            "+-----------------+-------------+--------------+-----------------+\n",
+            "|      Vine (paid)|          130|            70|53.84615384615385|\n",
+            "|Non-Vine (unpaid)|        16820|          7956|47.30083234244947|\n",
+            "+-----------------+-------------+--------------+-----------------+\n",
             "\n"
           ]
         }
@@ -470,7 +470,6 @@
       "source": [
         "#using all reviews for analysis\n",
         "all_reviews = df.count()\n",
-        "\n",
         "#5-star reviews\n",
         "five_star_df = df.filter(\"star_rating==5\")\n",
         "all_five_star_reviews = five_star_df.count()\n",
@@ -482,7 +481,7 @@
         "all_paid_percent = all_paid_reviews/total_reviews*100\n",
         "\n",
         "all_five_star_paid_reviews = all_paid_df.filter(\"star_rating==5\").count()\n",
-        "all_five_star_paid_percent = all_five_star_paid_reviews/all_reviews*100\n",
+        "all_five_star_paid_percent = all_five_star_paid_reviews/all_paid_reviews*100\n",
         "\n",
         "#Unpaid reviews\n",
         "all_unpaid_df = df.filter(df[\"vine\"] == \"N\")\n",
@@ -490,12 +489,12 @@
         "all_unpaid_percent = all_unpaid_reviews/total_reviews*100\n",
         "\n",
         "all_five_star_unpaid_reviews = all_unpaid_df.filter(\"star_rating==5\").count()\n",
-        "all_five_star_unpaid_percent = all_five_star_unpaid_reviews/all_reviews*100"
+        "all_five_star_unpaid_percent = all_five_star_unpaid_reviews/all_unpaid_reviews*100"
       ],
       "metadata": {
         "id": "3MgtcrCp6jr-"
       },
-      "execution_count": 12,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -514,20 +513,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PjN5uvG8XdU4",
-        "outputId": "43e176ac-9bfe-4733-db19-d10470cd527a"
+        "outputId": "9704819b-23c3-4078-d931-3417ea7667bf"
       },
-      "execution_count": 13,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+-----------------+-------------+--------------+-------------------+\n",
-            "|      Review Type|Total Reviews|5 Star Reviews|   % 5 Star Reviews|\n",
-            "+-----------------+-------------+--------------+-------------------+\n",
-            "|      Vine (paid)|         2775|          1356|0.17118769670488931|\n",
-            "|Non-Vine (unpaid)|       789338|        446360|  56.35054594483363|\n",
-            "+-----------------+-------------+--------------+-------------------+\n",
+            "+-----------------+-------------+--------------+------------------+\n",
+            "|      Review Type|Total Reviews|5 Star Reviews|  % 5 Star Reviews|\n",
+            "+-----------------+-------------+--------------+------------------+\n",
+            "|      Vine (paid)|         2775|          1356| 48.86486486486486|\n",
+            "|Non-Vine (unpaid)|       789338|        446360|56.548652161684856|\n",
+            "+-----------------+-------------+--------------+------------------+\n",
             "\n"
           ]
         }
@@ -553,9 +552,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2scDXKOqcVkm",
-        "outputId": "e2a17bb2-88f2-4ff2-f732-58bb6d97c99a"
+        "outputId": "f094613a-e9e2-49ec-a826-3b657ef37a51"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
